Ensure paragraphs both wrap to 3 lines on Opportunities page for Bug 709296
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@98661 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/opportunties.css
+++ b/style/covehead/opportunties.css
@@ -77,6 +77,7 @@
 
 #opportunities .section p {
     margin-bottom: 5px;
+    margin-right: 20px;
 }
 
 #opportunities .section .button {
